@@ -117,9 +117,10 @@ class AncestorReport(Report.Report):
             person_handle = self.map[key]
             person = self.database.get_person_from_handle(person_handle)
             name = NameDisplay.displayer.display_formal(person)
+            nkey = ReportUtils.get_person_key(self.database,person)
         
             self.doc.start_bold()
-            self.doc.write_text(name.strip())
+            self.doc.write_text(name.strip(),nkey)
             self.doc.end_bold()
             if name[-1:] == '.':
                 self.doc.write_text(" ")
